crates/client/tests/snapshots/render__column_clipped_at_the_left_edge.snap
---
source: crates/client/tests/render.rs
assertion_line: 111
expression: "fixture.render(Size::new(80, 24))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "──────────────────────────┐┌───────────────────────────────────────────────────┐",
        "5678901234567890123456789 ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "                          ││                                                   │",
        "──────────────────────────┘└───────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
cursor: Some(Position { x: 28, y: 1 })
