crates/client/tests/snapshots/render__decorations_beside_a_title.snap
---
source: crates/client/tests/render.rs
expression: "fixture.render(Size::new(60, 6))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 6 },
    content: [
        "╭vim───────────────[_][□][X]─╮╭cargo test --work─[_][□][X]─╮",
        "│editing                     ││                            │",
        "│                            ││                            │",
        "│                            ││                            │",
        "│                            ││                            │",
        "╰────────────────────────────╯╰────────────────────────────╯",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
cursor: Some(Position { x: 8, y: 1 })
